# galvan-lang

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  TOUR.md  branding.md  cli-support.md  publish.sh  spec.md  test_cli.galvan  todo.md
.github/workflows/: CI.yaml  examples.yaml
arc-core/src/: lib.rs
arc-lexer/: Cargo.toml
arc-lexer/src/: token.rs
arc-parser/: Cargo.toml
arc-parser/src/: declaration.rs  display.rs  lib.rs  modifier.rs  parse.rs  tokenizer.rs
arc-parser/src/declaration/: ident.rs  mod.rs  type.rs
arc-parser/src/parse/: parse_type.rs
arc-parser/src/result/: display.rs  errors.rs  message.rs
example-code/: array_type.galvan  empty.galvan  empty_struct_type.galvan  empty_tuple_type.galvan  empty_type.galvan  optional_dict.galvan  optional_type.galvan  result_type.galvan  result_type_implicit_error.galvan  simple_alias_type.galvan  simple_struct_type.galvan  simple_tuple_type.galvan
example-code/functions/: empty_function.galvan  function_call.galvan  member_function.galvan  mut_param_function.galvan  ref_param_function.galvan  simple_function.galvan
example-code/inference/: vec.galvan
example-code/types/: array_type.galvan  empty_struct_type.galvan  empty_tuple_type.galvan  empty_type.galvan  optional_dict.galvan  optional_type.galvan  ref_type.galvan  result_type.galvan  result_type_implicit_error.galvan  simple_alias_type.galvan  simple_struct_type.galvan  simple_tuple_type.galvan
example-projects/axum-api/: Cargo.toml  build.rs
example-projects/axum-api/src/: main.galvan  main.rs
example-projects/cli-app/: Cargo.toml
example-projects/hello-world/: Cargo.toml
example-projects/serde-json/: Cargo.toml
galvan-ast/: Cargo.toml
galvan-ast-macro/: Cargo.toml
galvan-ast-macro/src/: lib.rs
galvan-ast/src/: fn.rs  ident.rs  lib.rs  literal.rs  main.rs  modifier.rs  result.rs  tasks.rs  type.rs
galvan-ast/src/item/: assignment.rs  closure.rs  collection.rs  fn.rs  function_call.rs  ident.rs  infix_operator.rs  literal.rs  match_expression.rs  member.rs  mod.rs  modifier.rs  operator.rs  postfix.rs  postfix_operator.rs  prefix.rs  statement.rs  tasks.rs  toplevel.rs  type.rs  type_item.rs
galvan-ast/tests/: test_ast_conversion.rs
galvan-core/: Cargo.toml
galvan-core/src/: lib.rs
galvan-examples/: complex_types.galvan  empty.galvan  function_call.galvan  simple_types.galvan
galvan-files/: Cargo.toml
galvan-files/src/: exec.rs  lib.rs  source.rs
galvan-hir/: Cargo.toml
galvan-hir/src/: builtins.rs  error.rs  hir.rs  index.rs  lib.rs  mapping.rs  query.rs
galvan-hir/src/typecheck/: coerce.rs  expr.rs  mod.rs  scope.rs  tests.rs
galvan-into-ast/: Cargo.toml
galvan-into-ast/src/: cursor_macro.rs  lib.rs  main.rs  modifiers.rs  result.rs
galvan-into-ast/src/items/: literal.rs  mod.rs  statement.rs  struct_declaration.rs  toplevel.rs  type_element.rs
galvan-into-ast/src/items/expression/: collection_literal.rs  function_call.rs  infix.rs  match_expression.rs  mod.rs  postfix.rs  prefix.rs
galvan-lexer/: Cargo.toml
galvan-lexer/src/: lib.rs  token.rs
galvan-lsp/: Cargo.toml  README.md  compiler-features.md
galvan-lsp/src/: analysis.rs  document.rs  lib.rs  main.rs  position.rs  server.rs  workspace.rs
galvan-lsp/src/features/: completion.rs  diagnostics.rs  goto_definition.rs  hover.rs  mod.rs  references.rs
galvan-lsp/tests/: features.rs
galvan-macro/: Cargo.toml
galvan-macro/src/: lib.rs
galvan-parse/: Cargo.toml
galvan-parse/src/: exec.rs  lib.rs  main.rs
galvan-parser/: Cargo.toml
galvan-parser/src/: lib.rs  main.rs  modifier.rs  parse.rs  source.rs  tokenizer.rs
galvan-parser/src/declaration/: fn.rs  ident.rs  mod.rs  tasks.rs  type.rs
galvan-parser/src/parse/: parse_type.rs  parse_type_item.rs
galvan-parser/src/result/: display.rs  errors.rs  message.rs  mod.rs
galvan-pest/: Cargo.toml  galvan.pest
galvan-pest/src/: ast_handwritten.rs  exec.rs  lib.rs  main.rs
galvan-resolver/: Cargo.toml
galvan-resolver/src/: lib.rs  lookup.rs  scope.rs
galvan-rustdoc/: Cargo.toml  LIFTINGS.md
galvan-rustdoc/src/: cache.rs  error.rs  interop.rs  lib.rs  model.rs
galvan-rustdoc/src/interop/: curated.rs  function_id.rs  import.rs  lift.rs  lift_model.rs  mod.rs  query.rs  registry.rs  rustdoc_json.rs  state.rs  tests.rs  uses.rs
galvan-rustdoc/src/model/: conversions.rs  declarations.rs  mod.rs
galvan-test/: Cargo.toml
galvan-test-macro/: Cargo.toml
galvan-test-macro/src/: lib.rs
galvan-test/src/: arithmetic.galvan  assignment.galvan  bitwise.galvan  cast.galvan  chars.galvan  collections.galvan  concat.galvan  concat_assign.galvan  constructor.galvan  control_flow.galvan  empty.galvan  enum.galvan  extension_functions.galvan  for.galvan  generic.galvan  infix.galvan  lib.rs  logical.galvan  map.galvan  match.galvan  overloading.galvan  postfix.galvan  ranges.galvan  set.galvan  string.galvan  struct.galvan  trailing_closure.galvan
galvan-transpiler/: Cargo.toml
galvan-transpiler/src/: builtins.rs  cast.rs  context.rs  error.rs  exec.rs  lib.rs  main.rs  mapping.rs  sanitize.rs  transpile_struct.rs  transpile_type.rs  type_inference.rs
galvan-transpiler/src/codegen/: expression.rs  function.rs  mod.rs  statement.rs
galvan-transpiler/src/transpile_item/: assignment.rs  body.rs  closure.rs  collection.rs  fn_decl.rs  function_call.rs  ident.rs  literal.rs  member.rs  mod.rs  operator.rs  postfix.rs  statement.rs  struct.rs  task.rs  test_decl.rs  toplevel.rs  type.rs  visibility.rs
galvan-transpiler/test-cases/: empty.galvan
galvan-transpiler/test-cases/functions/: empty_function.galvan  function_call.galvan  member_function.galvan  mut_param_function.galvan  namespaces.galvan  ref_param_function.galvan  simple_function.galvan
galvan-transpiler/test-cases/inference/: vec.galvan
galvan-transpiler/test-cases/types/: empty_struct_type.galvan  optional_dict.galvan  result_type_implicit_error.galvan  simple_tuple_type.galvan
galvan-transpiler/tests/: test_transpilation.rs
src/: lib.rs  std.rs
src/std/: borrow.rs  control_flow.rs  mod.rs  result.rs
(+7 files in other folders)
