[workspace.package]
authors = ["Antonius Naumann"]
edition = "2021"
version = "0.0.0-dev09"
license = "MIT"

[workspace.dependencies]
galvan-ast = { path = "galvan-ast", version = "0.0.0-dev09" }
# galvan-core = { path = "galvan-core", version = "0.0.0-dev09" }
galvan-files = { path = "galvan-files", version = "0.0.0-dev09" }
galvan-pest = { path = "galvan-pest", version = "0.0.0-dev09" }
galvan-test-macro = { path = "galvan-test-macro", version = "0.0.0-dev09" }
galvan-resolver = { path = "galvan-resolver", version = "0.0.0-dev09" }

thiserror = "1.0.51"
itertools = "0.12.0"

[package]
name = "galvan"
description = "A higher-level programming language that transpiles to Rust"

authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
galvan-transpiler = { path = "galvan-transpiler", version = "0.0.0-dev09" }
itertools = "0.12.0"
anyhow = "1.0.79"

[features]
build = ["galvan-transpiler/exec"]

[lib]

[workspace]
resolver = "2"
members = [
  "galvan-ast",
  # "galvan-core",
  "galvan-files",
  "galvan-pest",
  "galvan-resolver",
  "galvan-transpiler",
  "galvan-test-macro",
  "galvan-test"
]