[workspace.package]
authors = ["Antonius Naumann"]
edition = "2021"
version = "0.0.3"
license = "MIT"

[workspace.dependencies]
galvan-ast = { path = "galvan-ast", version = "0.0.3" }
# galvan-core = { path = "galvan-core", version = "0.0.3" }
galvan-files = { path = "galvan-files", version = "0.0.3" }
galvan-test-macro = { path = "galvan-test-macro", version = "0.0.3" }
galvan-ast-macro = { path = "galvan-ast-macro", version = "0.0.3"}
galvan-resolver = { path = "galvan-resolver", version = "0.0.3" }
galvan-into-ast = { path = "galvan-into-ast", version = "0.0.3" }
galvan-parse = { path = "galvan-parse", version = "0.0.3" }

thiserror = "1.0.61"
itertools = "0.13.0"

[package]
name = "galvan"
description = "A higher-level programming language that transpiles to Rust"

authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
galvan-transpiler = { path = "galvan-transpiler", version = "0.0.3" }
itertools = "0.13.0"
anyhow = "1.0.86"

[features]
build = ["galvan-transpiler/exec"]

[lib]

[workspace]
resolver = "2"
members = [
  "galvan-ast-macro",
  "galvan-ast",
  "galvan-into-ast",
  "galvan-parse",
  # "galvan-core",
  "galvan-files",
  "galvan-resolver",
  "galvan-transpiler",
  "galvan-test-macro",
  "galvan-test",
  "galvan-lsp",
  "tree-sitter-galvan",
]
