[package]
name = "galvan-ast"
authors.workspace = true
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest-ast = "0.3.4"
pest_derive = "2.7.5"
from-pest = "0.3.2"
derive_more = { version = "0.99.17", features = [] }

galvan-pest = { path = "../galvan-pest" }

[features]
exec = ["galvan-pest/exec"]

[[bin]]
name = "galvan-ast"
required-features = ["exec"]
path = "src/main.rs"