[package]
name = "galvan-ast"
description = "AST for the Galvan programming language"

authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "0.99.17", features = [] }
typeunion = "0.1.0"

itertools.workspace = true
thiserror.workspace = true

galvan-files.workspace = true
galvan-ast-macro.workspace = true

[dev-dependencies]
galvan-test-macro.workspace = true
