[package]
name = "galvan-core"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
