[package]
name = "galvan-files"
description = "Locates galvan files in a directory, checks naming conventions and generates artifact names."

authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = { version = "2.4.0", optional = true }
thiserror = "1.0.50"

[features]
exec = ["dep:walkdir"]
