[package]
name = "galvan-into-ast"
description = "CST to AST conversion for the Galvan programming language"

authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
derive_more = { version = "0.99.17", features = [] }
typeunion = "0.1.0"

itertools.workspace = true
thiserror.workspace = true

galvan-files.workspace = true
galvan-ast.workspace = true

[dev-dependencies]
galvan-test-macro.workspace = true

