[package]
name = "galvan-parse"
description = "The parsing crate for the compiler of the Galvan programming language"

authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.22"

tree-sitter-galvan = { path = "../tree-sitter-galvan", version = "0.0.2" }

galvan-files.workspace = true
thiserror.workspace = true

[features]
exec = ["galvan-files/exec"]

[[bin]]
name = "galvan-parse"
required-features = ["exec"]
path = "src/main.rs"

