[package]
name = "galvan-parser"
authors.workspace = true
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"

galvan-lexer = { path = "../galvan-lexer" }
derive_more = "0.99.17"
annotate-snippets = { version = "0.9.1", features = ["color"] }
