[package]
name = "galvan-pest"
authors.workspace = true
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
galvan-parser = { path = "../galvan-parser" }
walkdir = { version = "2.4.0", optional = true }
pest = "2.7.5"
pest_derive = "2.7.5"

[features]
exec = ["dep:walkdir"]

[[bin]]
name = "galvan-parse"
required-features = ["exec"]
path = "src/main.rs"