[package]
name = "galvan-pest"
description = "Parser for the Galvan language using pest-grammar"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.10"
pest_derive = "2.7.10"

galvan-files.workspace = true

[features]
exec = ["galvan-files/exec"]

[[bin]]
name = "galvan-parse"
required-features = ["exec"]
path = "src/main.rs"
