[package]
name = "galvan-test-macro"
description = "Test macros for the Galvan programming language"

authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.5.0"
