[package]
name = "galvan-transpiler"
authors.workspace = true
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
itertools = { version = "0.12.0", optional = true }

galvan-files.workspace = true
galvan-ast.workspace = true

[dev-dependencies]
galvan-test-macro.workspace = true

[features]
exec = ["galvan-files/exec", "dep:itertools"]

[[bin]]
name = "galvan-transpile"
required-features = ["exec"]
path = "src/main.rs"
