[package]
name = "galvan-transpiler"
description = "Transpiler for the Galvan programming language"

authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
itertools = { version = "0.12.0", optional = true }
convert_case = "0.6.0"
derive_more = "0.99.17"

thiserror.workspace = true

galvan-files.workspace = true
galvan-ast.workspace = true
galvan-resolver.workspace = true


[dev-dependencies]
galvan-test-macro.workspace = true

[features]
exec = ["galvan-files/exec", "dep:itertools"]

[[bin]]
name = "galvan-transpile"
required-features = ["exec"]
path = "src/main.rs"
