[package]
name = "galvan-axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
galvan = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
galvan = { features = ["build"], path = "../.." }

[workspace]
